@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.6 2021/10/26 10:14:50 nia Exp $
-
-BLAKE2s (hdevtools-0.1.8.0.tar.gz) = df4f42cffd276c2b25346d4bbb9762f4fdb33d5221e7c313d86c40026249e9ec
-SHA512 (hdevtools-0.1.8.0.tar.gz) = 6f21e69e15799c60ca1acf5f96e41a44b0cebc17a97c33c6dc4ef06887dcd996450bf6debab217060ab458e2810d271220ca3645124a017ef6eefe49448fa827
-Size (hdevtools-0.1.8.0.tar.gz) = 22984 bytes
