@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2022,v 1.3939 2022/08/21 12:26:57 wiz Exp $
+$NetBSD: CHANGES-2022,v 1.3940 2022/08/21 12:29:22 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2022:
 
@@ -5783,3 +5783,4 @@ Changes to the packages collection and infrastructure in 2022:
 	Updated www/hugo to 0.101.0 [bsiegert 2022-08-21]
 	Added lang/go119 version 1.19 [bsiegert 2022-08-21]
 	Removed devel/hs-ghc-mtl [wiz 2022-08-21]
+	Removed devel/hdevtools successor devel/haskell-language-server [wiz 2022-08-21]
